# BudgetTracker

./: README.md
backend/: main.py  pyproject.toml  test_main.py
backend/api/: routes_budget.py  routes_plaid.py  routes_user.py
backend/models/: transaction.py  user.py
backend/services/: budget_service.py  plaid_service.py  user_service.py
backend/utils/: auth.py  config.py  database.py
